--- a/lecture29/index.html
+++ b/lecture29/index.html
@@ -36,19 +36,17 @@
                 </div>
                 <div class="card-footer-wrap">
                     <div class="auther-wrap">
-                        <div class="authar-wrap">
-                            <div class="auther-avatar-container">
-                                <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
-                                    alt="Avatar Image" class="avatar-pic" loading="lazy">
-                            </div>
-                            <div class="auther-info-wrap">
-                                <span>Jhon Doe</span>
-                                <span>Sept 19, 2021</span>
-                            </div>
+                        <div class="auther-avatar-container">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                        </div>
+                        <div class="auther-info-wrap">
+                            <span class="info-text">Jhon Doe</span>
+                            <span class="info-date">Sept 19, 2021</span>
                         </div>
                     </div>
                     <div class="tag-wrap">
-                        <a href="">Technology</a>
+                        <a href="" class="tech">Technology</a>
                     </div>
                 </div>
                 <div class="">
@@ -56,6 +54,223 @@
                 </div>
             </div>
             <!-- Card 1 end here -->
+            <div class="card-container">
+                <a href="#" class="card-image-wrap">
+                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                        loading="lazy">
+                </a>
+                <div class="card-title-wrap">
+                    <a href="#" class="card-title-anchor">
+                        <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-discription">Check out the latest tech gadgets hitting the market, from
+                        smartphones to smartwatche</p>
+                </div>
+                <div class="card-footer-wrap">
+                    <div class="auther-wrap">
+                        <div class="auther-avatar-container">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                        </div>
+                        <div class="auther-info-wrap">
+                            <span class="info-text">Jhon Doe</span>
+                            <span class="info-date">Sept 19, 2021</span>
+                        </div>
+                    </div>
+                    <div class="tag-wrap">
+                        <a href="" class="tech">Technology</a>
+                    </div>
+                </div>
+                <div class="">
+
+                </div>
+            </div>
+            <div class="card-container">
+                <a href="#" class="card-image-wrap">
+                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                        loading="lazy">
+                </a>
+                <div class="card-title-wrap">
+                    <a href="#" class="card-title-anchor">
+                        <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-discription">Check out the latest tech gadgets hitting the market, from
+                        smartphones to smartwatche</p>
+                </div>
+                <div class="card-footer-wrap">
+                    <div class="auther-wrap">
+                        <div class="auther-avatar-container">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                        </div>
+                        <div class="auther-info-wrap">
+                            <span class="info-text">Jhon Doe</span>
+                            <span class="info-date">Sept 19, 2021</span>
+                        </div>
+                    </div>
+                    <div class="tag-wrap">
+                        <a href="" class="tech">Technology</a>
+                    </div>
+                </div>
+                <div class="">
+
+                </div>
+            </div>
+            <div class="card-container">
+                <a href="#" class="card-image-wrap">
+                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                        loading="lazy">
+                </a>
+                <div class="card-title-wrap">
+                    <a href="#" class="card-title-anchor">
+                        <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-discription">Check out the latest tech gadgets hitting the market, from
+                        smartphones to smartwatche</p>
+                </div>
+                <div class="card-footer-wrap">
+                    <div class="auther-wrap">
+                        <div class="auther-avatar-container">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                        </div>
+                        <div class="auther-info-wrap">
+                            <span class="info-text">Jhon Doe</span>
+                            <span class="info-date">Sept 19, 2021</span>
+                        </div>
+                    </div>
+                    <div class="tag-wrap">
+                        <a href="" class="tech">Technology</a>
+                    </div>
+                </div>
+                <div class="">
+
+                </div>
+            </div>
+            <div class="card-container">
+                <a href="#" class="card-image-wrap">
+                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                        loading="lazy">
+                </a>
+                <div class="card-title-wrap">
+                    <a href="#" class="card-title-anchor">
+                        <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-discription">Check out the latest tech gadgets hitting the market, from
+                        smartphones to smartwatche</p>
+                </div>
+                <div class="card-footer-wrap">
+                    <div class="auther-wrap">
+                        <div class="auther-avatar-container">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                        </div>
+                        <div class="auther-info-wrap">
+                            <span class="info-text">Jhon Doe</span>
+                            <span class="info-date">Sept 19, 2021</span>
+                        </div>
+                    </div>
+                    <div class="tag-wrap">
+                        <a href="" class="tech">Technology</a>
+                    </div>
+                </div>
+                <div class="">
+
+                </div>
+            </div>
+            <div class="card-container">
+                <a href="#" class="card-image-wrap">
+                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                        loading="lazy">
+                </a>
+                <div class="card-title-wrap">
+                    <a href="#" class="card-title-anchor">
+                        <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-discription">Check out the latest tech gadgets hitting the market, from
+                        smartphones to smartwatche</p>
+                </div>
+                <div class="card-footer-wrap">
+                    <div class="auther-wrap">
+                        <div class="auther-avatar-container">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                        </div>
+                        <div class="auther-info-wrap">
+                            <span class="info-text">Jhon Doe</span>
+                            <span class="info-date">Sept 19, 2021</span>
+                        </div>
+                    </div>
+                    <div class="tag-wrap">
+                        <a href="" class="tech">Technology</a>
+                    </div>
+                </div>
+                <div class="">
+
+                </div>
+            </div>
+            <div class="card-container">
+                <a href="#" class="card-image-wrap">
+                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                        loading="lazy">
+                </a>
+                <div class="card-title-wrap">
+                    <a href="#" class="card-title-anchor">
+                        <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-discription">Check out the latest tech gadgets hitting the market, from
+                        smartphones to smartwatche</p>
+                </div>
+                <div class="card-footer-wrap">
+                    <div class="auther-wrap">
+                        <div class="auther-avatar-container">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                        </div>
+                        <div class="auther-info-wrap">
+                            <span class="info-text">Jhon Doe</span>
+                            <span class="info-date">Sept 19, 2021</span>
+                        </div>
+                    </div>
+                    <div class="tag-wrap">
+                        <a href="" class="tech">Technology</a>
+                    </div>
+                </div>
+                <div class="">
+
+                </div>
+            </div>
+            <div class="card-container">
+                <a href="#" class="card-image-wrap">
+                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                        loading="lazy">
+                </a>
+                <div class="card-title-wrap">
+                    <a href="#" class="card-title-anchor">
+                        <h2 class="card-title">New Gadgets Released</h2>
+                    </a>
+                    <p class="card-discription">Check out the latest tech gadgets hitting the market, from
+                        smartphones to smartwatche</p>
+                </div>
+                <div class="card-footer-wrap">
+                    <div class="auther-wrap">
+                        <div class="auther-avatar-container">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
+                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                        </div>
+                        <div class="auther-info-wrap">
+                            <span class="info-text">Jhon Doe</span>
+                            <span class="info-date">Sept 19, 2021</span>
+                        </div>
+                    </div>
+                    <div class="tag-wrap">
+                        <a href="" class="tech">Technology</a>
+                    </div>
+                </div>
+                <div class="">
+
+                </div>
+            </div>
         </div>
     </div>
 </body>
