--- a/lecture29/index.html
+++ b/lecture29/index.html
@@ -24,7 +24,7 @@
             <!-- Card 1 start here -->
             <div class="card-container">
                 <a href="#" class="card-image-wrap">
-                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                    <img src="https://source.unsplash.com/random/600×400?gadgets" alt="1 card Image" class="card-img"
                         loading="lazy">
                 </a>
                 <div class="card-title-wrap">
@@ -37,8 +37,8 @@
                 <div class="card-footer-wrap">
                     <div class="auther-wrap">
                         <div class="auther-avatar-container">
-                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
-                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="Avatar Image"
+                                class="avatar-pic" loading="lazy">
                         </div>
                         <div class="auther-info-wrap">
                             <span class="info-text">Jhon Doe</span>
@@ -61,7 +61,7 @@
                 </a>
                 <div class="card-title-wrap">
                     <a href="#" class="card-title-anchor">
-                        <h2 class="card-title">New Gadgets Released</h2>
+                        <h2 class="card-title">Healthy Eating Tips</h2>
                     </a>
                     <p class="card-discription">Check out the latest tech gadgets hitting the market, from
                         smartphones to smartwatche</p>
@@ -69,8 +69,8 @@
                 <div class="card-footer-wrap">
                     <div class="auther-wrap">
                         <div class="auther-avatar-container">
-                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
-                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="Avatar Image"
+                                class="avatar-pic" loading="lazy">
                         </div>
                         <div class="auther-info-wrap">
                             <span class="info-text">Jhon Doe</span>
@@ -87,12 +87,12 @@
             </div>
             <div class="card-container">
                 <a href="#" class="card-image-wrap">
-                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                    <img src="https://source.unsplash.com/random/600×400?travel" alt="1 card Image" class="card-img"
                         loading="lazy">
                 </a>
                 <div class="card-title-wrap">
                     <a href="#" class="card-title-anchor">
-                        <h2 class="card-title">New Gadgets Released</h2>
+                        <h2 class="card-title">Travel Bucket List</h2>
                     </a>
                     <p class="card-discription">Check out the latest tech gadgets hitting the market, from
                         smartphones to smartwatche</p>
@@ -100,8 +100,8 @@
                 <div class="card-footer-wrap">
                     <div class="auther-wrap">
                         <div class="auther-avatar-container">
-                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
-                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="Avatar Image"
+                                class="avatar-pic" loading="lazy">
                         </div>
                         <div class="auther-info-wrap">
                             <span class="info-text">Jhon Doe</span>
@@ -118,12 +118,12 @@
             </div>
             <div class="card-container">
                 <a href="#" class="card-image-wrap">
-                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
-                        loading="lazy">
+                    <img src="https://source.unsplash.com/random/600×400?productivity" alt="1 card Image"
+                        class="card-img" loading="lazy">
                 </a>
                 <div class="card-title-wrap">
                     <a href="#" class="card-title-anchor">
-                        <h2 class="card-title">New Gadgets Released</h2>
+                        <h2 class="card-title">Effective Time Management</h2>
                     </a>
                     <p class="card-discription">Check out the latest tech gadgets hitting the market, from
                         smartphones to smartwatche</p>
@@ -131,8 +131,8 @@
                 <div class="card-footer-wrap">
                     <div class="auther-wrap">
                         <div class="auther-avatar-container">
-                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
-                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="Avatar Image"
+                                class="avatar-pic" loading="lazy">
                         </div>
                         <div class="auther-info-wrap">
                             <span class="info-text">Jhon Doe</span>
@@ -149,12 +149,12 @@
             </div>
             <div class="card-container">
                 <a href="#" class="card-image-wrap">
-                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
-                        loading="lazy">
+                    <img src="https://source.unsplash.com/random/600×400?mindfulness" alt="1 card Image"
+                        class="card-img" loading="lazy">
                 </a>
                 <div class="card-title-wrap">
                     <a href="#" class="card-title-anchor">
-                        <h2 class="card-title">New Gadgets Released</h2>
+                        <h2 class="card-title">Art of Mindfulness</h2>
                     </a>
                     <p class="card-discription">Check out the latest tech gadgets hitting the market, from
                         smartphones to smartwatche</p>
@@ -162,8 +162,8 @@
                 <div class="card-footer-wrap">
                     <div class="auther-wrap">
                         <div class="auther-avatar-container">
-                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
-                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="Avatar Image"
+                                class="avatar-pic" loading="lazy">
                         </div>
                         <div class="auther-info-wrap">
                             <span class="info-text">Jhon Doe</span>
@@ -180,12 +180,12 @@
             </div>
             <div class="card-container">
                 <a href="#" class="card-image-wrap">
-                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                    <img src="https://source.unsplash.com/random/600×400?docer" alt="1 card Image" class="card-img"
                         loading="lazy">
                 </a>
                 <div class="card-title-wrap">
                     <a href="#" class="card-title-anchor">
-                        <h2 class="card-title">New Gadgets Released</h2>
+                        <h2 class="card-title">DIY Home Docer</h2>
                     </a>
                     <p class="card-discription">Check out the latest tech gadgets hitting the market, from
                         smartphones to smartwatche</p>
@@ -193,8 +193,8 @@
                 <div class="card-footer-wrap">
                     <div class="auther-wrap">
                         <div class="auther-avatar-container">
-                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
-                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="Avatar Image"
+                                class="avatar-pic" loading="lazy">
                         </div>
                         <div class="auther-info-wrap">
                             <span class="info-text">Jhon Doe</span>
@@ -211,12 +211,12 @@
             </div>
             <div class="card-container">
                 <a href="#" class="card-image-wrap">
-                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
-                        loading="lazy">
+                    <img src="https://source.unsplash.com/random/600×400?sustainability" alt="1 card Image"
+                        class="card-img" loading="lazy">
                 </a>
                 <div class="card-title-wrap">
                     <a href="#" class="card-title-anchor">
-                        <h2 class="card-title">New Gadgets Released</h2>
+                        <h2 class="card-title">Green Energy Solutions</h2>
                     </a>
                     <p class="card-discription">Check out the latest tech gadgets hitting the market, from
                         smartphones to smartwatche</p>
@@ -224,8 +224,8 @@
                 <div class="card-footer-wrap">
                     <div class="auther-wrap">
                         <div class="auther-avatar-container">
-                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
-                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="Avatar Image"
+                                class="avatar-pic" loading="lazy">
                         </div>
                         <div class="auther-info-wrap">
                             <span class="info-text">Jhon Doe</span>
@@ -242,12 +242,12 @@
             </div>
             <div class="card-container">
                 <a href="#" class="card-image-wrap">
-                    <img src="https://source.unsplash.com/random/600×400?healthy" alt="1 card Image" class="card-img"
+                    <img src="https://source.unsplash.com/random/600×400?positivity" alt="1 card Image" class="card-img"
                         loading="lazy">
                 </a>
                 <div class="card-title-wrap">
                     <a href="#" class="card-title-anchor">
-                        <h2 class="card-title">New Gadgets Released</h2>
+                        <h2 class="card-title">The Power of Positivity</h2>
                     </a>
                     <p class="card-discription">Check out the latest tech gadgets hitting the market, from
                         smartphones to smartwatche</p>
@@ -255,8 +255,8 @@
                 <div class="card-footer-wrap">
                     <div class="auther-wrap">
                         <div class="auther-avatar-container">
-                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64"
-                                alt="Avatar Image" class="avatar-pic" loading="lazy">
+                            <img src="https://api.dicebear.com/7.x/notionists/svg?seed=John?size=64" alt="Avatar Image"
+                                class="avatar-pic" loading="lazy">
                         </div>
                         <div class="auther-info-wrap">
                             <span class="info-text">Jhon Doe</span>
