--- a/lecture31/index.html
+++ b/lecture31/index.html
@@ -27,6 +27,7 @@
             /* grid-template-columns: repeat(3, 1fr); */
             /* Single line grid example */
             grid-template-columns: repeat(auto-fit, minmax(200px, 500px));
+            /* grid-template-rows: repeat(auto-fit, minmax(200px, 500px)); */
         }
 
         .item {
