--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -8,8 +8,23 @@
     <title>Study Project</title>
 </head>
 <body>
-    <div class="container">
-
+    <div class="header">
+        <div class="header-content">
+            <div class="logo">
+                <img src="LOgoImage" alt="">
+                <span class="logo-text">StudySync</span>
+            </div>
+            <nav>
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#features" class="nav-link">Features</a>
+                <a href="#pricing" class="nav-link">Pricing</a>
+                <a href="#blog" class="nav-link">Blog</a>
+                <a href="#about" class="nav-link">About</a>
+            </nav>
+            <a href="#contact" class="contact-button">
+                Contact US
+            </a>
+        </div>
     </div>
 </body>
 </html>
