--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -11,7 +11,7 @@
     <div class="header">
         <div class="header-content">
             <div class="logo">
-                <img src="LOgoImage" alt="">
+                <img src="./Image/StudySyn.svg" alt="" class="logo-icon">
                 <span class="logo-text">StudySync</span>
             </div>
             <nav>
