--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -33,11 +33,12 @@
     </div>
 
     <div class="content">
-        <section class="main-content">
+        <section class="main-section">
             <div class="left-content">
-                <div class="section-label"></div>
-                <div class="section-title"></div>
-                <div class="section-discription"></div>
+                <p class="section-label">Very proud to introduce</p>
+                <h1 class="section-title">Seamless Learning for Brighter Futures</h1>
+                <p class="section-discription">Our innovative platform offers an effortless and seamless approach to learning, empowering students of all ages to achieve brighter futures. Join us on a transformative journey to simplify education and unlock your full potential.
+                </p>
                 <div class="button-group">
                     <a href="#start" class="start-button">Start</a>
                     <a href="#tour" class="take-tour">Take Tour</a>
