add-hero-section

--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -49,6 +49,18 @@
                     <img src="./Image/usgs-hoS3dzgpHzw-unsplash.jpg" alt="Main-Image" class="section-image">
                 </div>
             </div>
+        </section> 
+        <section class="trusted-section">
+            <div class="trusted-containter">
+                <h1>Trusted by the best</h1>
+                <div class="trusted-company-wrap">
+                    <div class="t-img-wrapper">
+                        <img src="./Image/Google.svg" alt="">
+                        <span>Google</span>
+                    </div>
+                    
+                </div>
+            </div>
         </section>
     </div>
 </body>
