card-section-add

--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -37,7 +37,9 @@
             <div class="left-content">
                 <p class="section-label">Very proud to introduce</p>
                 <h1 class="section-title">Seamless Learning for Brighter Futures</h1>
-                <p class="section-discription">Our innovative platform offers an effortless and seamless approach to learning, empowering students of all ages to achieve brighter futures. Join us on a transformative journey to simplify education and unlock your full potential.
+                <p class="section-discription">Our innovative platform offers an effortless and seamless approach to
+                    learning, empowering students of all ages to achieve brighter futures. Join us on a transformative
+                    journey to simplify education and unlock your full potential.
                 </p>
                 <div class="button-group">
                     <a href="#start" class="start-button">Start</a>
@@ -49,19 +51,113 @@
                     <img src="./Image/usgs-hoS3dzgpHzw-unsplash.jpg" alt="Main-Image" class="section-image">
                 </div>
             </div>
-        </section> 
+        </section>
         <section class="trusted-section">
             <div class="trusted-containter">
-                <h1>Trusted by the best</h1>
+                <h1 class="company-title">Trusted by the best</h1>
                 <div class="trusted-company-wrap">
                     <div class="t-img-wrapper">
-                        <img src="./Image/Google.svg" alt="">
-                        <span>Google</span>
+                        <img src="./Image/Google.svg" alt="Google-icon" class="goole-icon">
+                        <span class="google-text">Google</span>
                     </div>
-                    
+                    <div class="t-img-wrapper">
+                        <img src="./Image/Microsoft.svg" alt="Google-icon" class="goole-icon">
+                        <span class="google-text">Microsoft</span>
+                    </div>
+                    <div class="t-img-wrapper">
+                        <img src="./Image/linkedin-copy.svg" alt="Google-icon" class="goole-icon">
+                        <span class="google-text">Linkedin</span>
+                    </div>
+                    <div class="t-img-wrapper">
+                        <img src="./Image/VectorEdu.svg" alt="Google-icon" class="goole-icon">
+                        <span class="google-text">VectorEdu</span>
+                    </div>
+
                 </div>
             </div>
         </section>
+    </div>
+    <div class="feature-container">
+        <div class="card-container">
+            <div class="">
+                <div class="">
+                    <h1 class="card-title">Our competitive advantage</h1>
+                    <p class="card-subtitle">This is a section of some simple filler text, also known as placeholder
+                        text. It shares some characteristics of real written text but is randow or otherwise generated
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="card-wrapper">
+                        <div class="learn-icon">
+                            <img src="./Image/PersonalizedLearn.svg" alt="Learn-icon" class="learn-img">
+                        </div>
+
+                        <div class="card-wrap-box">
+                            <h2 class="card-wrap-title">Personalized Learing</h2>
+                            <p class="card-wrap-subtitle">Offer tailored learning experience through AI and machine
+                                learning to cater to individual students needs</p>
+                        </div>
+                    </div>
+                    <div class="card-wrapper">
+                        <div class="learn-icon">
+                            <img src="./Image/Affordability.svg" alt="Learn-icon" class="learn-img">
+                        </div>
+
+                        <div class="card-wrap-box">
+                            <h2 class="card-wrap-title">Affordability</h2>
+                            <p class="card-wrap-subtitle">Provide high-quality education at an affordable price point, making it accessible to a broader audience</p>
+                        </div>
+                    </div>
+                    <div class="card-wrapper">
+                        <div class="learn-icon">
+                            <img src="./Image/IndustryPatner.svg" alt="Learn-icon" class="learn-img">
+                        </div>
+
+                        <div class="card-wrap-box">
+                            <h2 class="card-wrap-title">Industry Partnerships</h2>
+                            <p class="card-wrap-subtitle">Collaborate with well-known companies and institutions to offer accredited courses and certifications, adding credibility to your offerings.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card-wrapper">
+                        <div class="learn-icon">
+                            <img src="./Image/InnovativeTech.svg" alt="Learn-icon" class="learn-img">
+                        </div>
+
+                        <div class="card-wrap-box">
+                            <h2 class="card-wrap-title">Innovative Technology
+                            </h2>
+                            <p class="card-wrap-subtitle">Utilize cutting-edge technology, such as augmented reality or virtual reality, to create immersive learning experiences.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card-wrapper">
+                        <div class="learn-icon">
+                            <img src="./Image/call.png" alt="Learn-icon" class="learn-img">
+                        </div>
+
+                        <div class="card-wrap-box">
+                            <h2 class="card-wrap-title">Responsive Support</h2>
+                            <p class="card-wrap-subtitle">Provide exceptional customer support and assistance to students and educators.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card-wrapper">
+                        <div class="learn-icon">
+                            <img src="./Image/Analytics.svg" alt="Learn-icon" class="learn-img">
+                        </div>
+
+                        <div class="card-wrap-box">
+                            <h2 class="card-wrap-title">Analytics and Insights
+                            </h2>
+                            <p class="card-wrap-subtitle">Offer detailed progress tracking and analytics to help students and teachers monitor performance and make data-driven decisions.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
     </div>
 </body>
 
