--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -87,7 +87,7 @@
                     </p>
                 </div>
                 <div class="card">
-                    <div class="card-wrapper">
+                    <div class="card-wrapper item-wrap5">
                         <div class="learn-icon">
                             <img src="./Image/PersonalizedLearn.svg" alt="Learn-icon" class="learn-img">
                         </div>
@@ -98,7 +98,7 @@
                                 learning to cater to individual students needs</p>
                         </div>
                     </div>
-                    <div class="card-wrapper">
+                    <div class="card-wrapper item-wrap5">
                         <div class="learn-icon">
                             <img src="./Image/Affordability.svg" alt="Learn-icon" class="learn-img">
                         </div>
@@ -108,7 +108,7 @@
                             <p class="card-wrap-subtitle">Provide high-quality education at an affordable price point, making it accessible to a broader audience</p>
                         </div>
                     </div>
-                    <div class="card-wrapper">
+                    <div class="card-wrapper item-wrap5">
                         <div class="learn-icon">
                             <img src="./Image/IndustryPatner.svg" alt="Learn-icon" class="learn-img">
                         </div>
@@ -119,7 +119,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card-wrapper">
+                    <div class="card-wrapper item-wrap5">
                         <div class="learn-icon">
                             <img src="./Image/InnovativeTech.svg" alt="Learn-icon" class="learn-img">
                         </div>
@@ -131,7 +131,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card-wrapper">
+                    <div class="card-wrapper item-wrap5">
                         <div class="learn-icon">
                             <img src="./Image/call.png" alt="Learn-icon" class="learn-img">
                         </div>
@@ -142,7 +142,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card-wrapper">
+                    <div class="card-wrapper item-wrap5">
                         <div class="learn-icon">
                             <img src="./Image/Analytics.svg" alt="Learn-icon" class="learn-img">
                         </div>
