--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -80,82 +80,84 @@
     <div class="feature-container">
         <div class="card-container">
             <div class="">
-                <div class="">
-                    <h1 class="card-title">Our competitive advantage</h1>
-                    <p class="card-subtitle">This is a section of some simple filler text, also known as placeholder
-                        text. It shares some characteristics of real written text but is randow or otherwise generated
-                    </p>
-                </div>
-                <div class="card">
-                    <div class="card-wrapper item-wrap1">
-                        <div class="learn-icon">
-                            <img src="./Image/PersonalizedLearn.svg" alt="Learn-icon" class="learn-img">
-                        </div>
-
-                        <div class="card-wrap-box">
-                            <h2 class="card-wrap-title">Personalized Learing</h2>
-                            <p class="card-wrap-subtitle">Offer tailored learning experience through AI and machine
-                                learning to cater to individual students needs</p>
-                        </div>
+                <h1 class="card-title">Our competitive advantage</h1>
+                <p class="card-subtitle">This is a section of some simple filler text, also known as placeholder
+                    text. It shares some characteristics of real written text but is randow or otherwise generated
+                </p>
+            </div>
+            <div class="card">
+                <div class="card-wrapper item-wrap1">
+                    <div class="learn-icon">
+                        <img src="./Image/PersonalizedLearn.svg" alt="Learn-icon" class="learn-img">
                     </div>
-                    <div class="card-wrapper item-wrap2">
-                        <div class="learn-icon">
-                            <img src="./Image/Affordability.svg" alt="Learn-icon" class="learn-img">
-                        </div>
 
-                        <div class="card-wrap-box">
-                            <h2 class="card-wrap-title">Affordability</h2>
-                            <p class="card-wrap-subtitle">Provide high-quality education at an affordable price point, making it accessible to a broader audience</p>
-                        </div>
-                    </div>
-                    <div class="card-wrapper item-wrap3">
-                        <div class="learn-icon">
-                            <img src="./Image/IndustryPatner.svg" alt="Learn-icon" class="learn-img">
-                        </div>
-
-                        <div class="card-wrap-box">
-                            <h2 class="card-wrap-title">Industry Partnerships</h2>
-                            <p class="card-wrap-subtitle">Collaborate with well-known companies and institutions to offer accredited courses and certifications, adding credibility to your offerings.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card-wrapper item-wrap4">
-                        <div class="learn-icon">
-                            <img src="./Image/InnovativeTech.svg" alt="Learn-icon" class="learn-img">
-                        </div>
-
-                        <div class="card-wrap-box">
-                            <h2 class="card-wrap-title">Innovative Technology
-                            </h2>
-                            <p class="card-wrap-subtitle">Utilize cutting-edge technology, such as augmented reality or virtual reality, to create immersive learning experiences.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card-wrapper item-wrap5">
-                        <div class="learn-icon">
-                            <img src="./Image/call.png" alt="Learn-icon" class="learn-img">
-                        </div>
-
-                        <div class="card-wrap-box">
-                            <h2 class="card-wrap-title">Responsive Support</h2>
-                            <p class="card-wrap-subtitle">Provide exceptional customer support and assistance to students and educators.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card-wrapper item-wrap6">
-                        <div class="learn-icon">
-                            <img src="./Image/Analytics.svg" alt="Learn-icon" class="learn-img">
-                        </div>
-
-                        <div class="card-wrap-box">
-                            <h2 class="card-wrap-title">Analytics and Insights
-                            </h2>
-                            <p class="card-wrap-subtitle">Offer detailed progress tracking and analytics to help students and teachers monitor performance and make data-driven decisions.
-                            </p>
-                        </div>
+                    <div class="card-wrap-box">
+                        <h2 class="card-wrap-title">Personalized Learing</h2>
+                        <p class="card-wrap-subtitle">Offer tailored learning experience through AI and machine
+                            learning to cater to individual students needs</p>
                     </div>
                 </div>
-                
+                <div class="card-wrapper item-wrap2">
+                    <div class="learn-icon">
+                        <img src="./Image/Affordability.svg" alt="Learn-icon" class="learn-img">
+                    </div>
+
+                    <div class="card-wrap-box">
+                        <h2 class="card-wrap-title">Affordability</h2>
+                        <p class="card-wrap-subtitle">Provide high-quality education at an affordable price point,
+                            making it accessible to a broader audience</p>
+                    </div>
+                </div>
+                <div class="card-wrapper item-wrap3">
+                    <div class="learn-icon">
+                        <img src="./Image/IndustryPatner.svg" alt="Learn-icon" class="learn-img">
+                    </div>
+
+                    <div class="card-wrap-box">
+                        <h2 class="card-wrap-title">Industry Partnerships</h2>
+                        <p class="card-wrap-subtitle">Collaborate with well-known companies and institutions to offer
+                            accredited courses and certifications, adding credibility to your offerings.
+                        </p>
+                    </div>
+                </div>
+                <div class="card-wrapper item-wrap4">
+                    <div class="learn-icon">
+                        <img src="./Image/InnovativeTech.svg" alt="Learn-icon" class="learn-img">
+                    </div>
+
+                    <div class="card-wrap-box">
+                        <h2 class="card-wrap-title">Innovative Technology
+                        </h2>
+                        <p class="card-wrap-subtitle">Utilize cutting-edge technology, such as augmented reality or
+                            virtual reality, to create immersive learning experiences.
+                        </p>
+                    </div>
+                </div>
+                <div class="card-wrapper item-wrap5">
+                    <div class="learn-icon">
+                        <img src="./Image/call.png" alt="Learn-icon" class="learn-img">
+                    </div>
+
+                    <div class="card-wrap-box">
+                        <h2 class="card-wrap-title">Responsive Support</h2>
+                        <p class="card-wrap-subtitle">Provide exceptional customer support and assistance to students
+                            and educators.
+                        </p>
+                    </div>
+                </div>
+                <div class="card-wrapper item-wrap">
+                    <div class="learn-icon">
+                        <img src="./Image/Analytics.svg" alt="Learn-icon" class="learn-img">
+                    </div>
+
+                    <div class="card-wrap-box">
+                        <h2 class="card-wrap-title">Analytics and Insights
+                        </h2>
+                        <p class="card-wrap-subtitle">Offer detailed progress tracking and analytics to help students
+                            and teachers monitor performance and make data-driven decisions.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
