--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -145,7 +145,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card-wrapper item-wrap">
+                <div class="card-wrapper item-wrap6">
                     <div class="learn-icon">
                         <img src="./Image/Analytics.svg" alt="Learn-icon" class="learn-img">
                     </div>
@@ -156,6 +156,47 @@
                         <p class="card-wrap-subtitle">Offer detailed progress tracking and analytics to help students
                             and teachers monitor performance and make data-driven decisions.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="testimonial-container">
+        <div class="testimonial-content">
+            <h2>What Others Say About Us</h2>
+            <div class="testimonial-grid">
+                <!-- Card 1 -->
+                <div class="testimonial-card">
+                    <p class="testimonial-text"> “StudySync revolutionized my classroom! Engaging content and teacher
+                        resources make learning enjoyable. Highly recommended for educators.”</p>
+                    <div class="testtiminial-avatar">
+                        <img src="./Image/avatar1.png" alt="">
+                    </div>
+                    <div class="testimonial-details">
+                        <h3>Sarah Johnson</h3>
+                        <p>8th Grade English Teacher</p>
+                    </div>
+                </div>
+                <!-- Card 2 -->
+                <div class="testimonial-card">
+                    <p class="testimonial-text"> “StudySync transformed our family's learning journey. Safe, interactive, and progress tracking features are invaluable for parents.”</p>
+                    <div class="testtiminial-avatar">
+                        <img src="./Image/avatar2.png" alt="">
+                    </div>
+                    <div class="testimonial-details">
+                        <h3>Mark Davis</h3>
+                        <p>Parent</p>
+                    </div>
+                </div>
+                <!-- Card 3 -->
+                <div class="testimonial-card">
+                    <p class="testimonial-text"> “StudySync, a true game-changer! Flexible content, tailored assessments, and excellent support. Integral to our school district's success.”</p>
+                    <div class="testtiminial-avatar">
+                        <img src="./Image/avatar3.png" alt="">
+                    </div>
+                    <div class="testimonial-details">
+                        <h3>Dr. James Carter</h3>
+                        <p>School Administrator</p>
                     </div>
                 </div>
             </div>
