--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -163,40 +163,42 @@
     </div>
     <div class="testimonial-container">
         <div class="testimonial-content">
-            <h2>What Others Say About Us</h2>
+            <h2 class="testimonial-title">What Others Say About Us</h2>
             <div class="testimonial-grid">
                 <!-- Card 1 -->
                 <div class="testimonial-card">
                     <p class="testimonial-text"> “StudySync revolutionized my classroom! Engaging content and teacher
                         resources make learning enjoyable. Highly recommended for educators.”</p>
-                    <div class="testtiminial-avatar">
+                    <div class="testimonial-avatar">
                         <img src="./Image/avatar1.png" alt="">
                     </div>
                     <div class="testimonial-details">
-                        <h3>Sarah Johnson</h3>
-                        <p>8th Grade English Teacher</p>
+                        <h3 class="testimonial-name">Sarah Johnson</h3>
+                        <p class="testimonial-disc">8th Grade English Teacher</p>
                     </div>
                 </div>
                 <!-- Card 2 -->
                 <div class="testimonial-card">
-                    <p class="testimonial-text"> “StudySync transformed our family's learning journey. Safe, interactive, and progress tracking features are invaluable for parents.”</p>
-                    <div class="testtiminial-avatar">
+                    <p class="testimonial-text"> “StudySync transformed our family's learning journey. Safe,
+                        interactive, and progress tracking features are invaluable for parents.”</p>
+                    <div class="testimonial-avatar">
                         <img src="./Image/avatar2.png" alt="">
                     </div>
                     <div class="testimonial-details">
-                        <h3>Mark Davis</h3>
-                        <p>Parent</p>
+                        <h3 class="testimonial-name">Mark Davis</h3>
+                        <p class="testimonial-disc">Parent</p>
                     </div>
                 </div>
                 <!-- Card 3 -->
                 <div class="testimonial-card">
-                    <p class="testimonial-text"> “StudySync, a true game-changer! Flexible content, tailored assessments, and excellent support. Integral to our school district's success.”</p>
-                    <div class="testtiminial-avatar">
+                    <p class="testimonial-text"> “StudySync, a true game-changer! Flexible content, tailored
+                        assessments, and excellent support. Integral to our school district's success.”</p>
+                    <div class="testimonial-avatar">
                         <img src="./Image/avatar3.png" alt="">
                     </div>
                     <div class="testimonial-details">
-                        <h3>Dr. James Carter</h3>
-                        <p>School Administrator</p>
+                        <h3 class="testimonial-name">Dr. James Carter</h3>
+                        <p class="testimonial-disc">School Administrator</p>
                     </div>
                 </div>
             </div>
