--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -161,6 +161,7 @@
             </div>
         </div>
     </div>
+    <!-- Testimonial Section start -->
     <div class="testimonial-container">
         <div class="testimonial-content">
             <h2 class="testimonial-title">What Others Say About Us</h2>
