--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -205,6 +205,39 @@
             </div>
         </div>
     </div>
+    <!--  -->
+    <header>
+        <h1>MD Zahid Husaain</h1>
+        <p>Front End Developer from Muzaffarpur, Bihar</p>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>Hello! I am MD Zahid Husaain, a passionate front-end developer based in Muzaffarpur, Bihar. With 1 year of
+            experience in the field, I strive to create user-friendly and visually appealing web applications.</p>
+    </section>
+
+    <section>
+        <h2>Technical Skills</h2>
+        <ul>
+            <li>React</li>
+            <li>Javascript</li>
+            <li>Bootstrap</li>
+            <li>HTML</li>
+            <li>CSS</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Experience</h2>
+        <p>I have 1 year of experience in front-end development, working on various projects and honing my skills in
+            creating dynamic and responsive user interfaces.</p>
+    </section>
+
+    <footer>
+        <p>Contact me at: your@email.com</p>
+    </footer>
+
 </body>
 
 </html>
