add-news section

--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -205,7 +205,35 @@
             </div>
         </div>
     </div>
-    <!--  -->
+    <!-- Testimonial Section end -->
+
+    <!-- News Letter section start -->
+    <div class="newsLetter-container">
+        <div class="newsLetter-content">
+            <!-- news-left -->
+            <div class="news-left">
+
+            </div>
+            <!-- news-right -->
+            <div class="news-right">
+
+            </div>
+        </div>
+    </div>
+    <!-- News Letter section end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
     <header>
         <h1>MD Zahid Husaain</h1>
         <p>Front End Developer from Muzaffarpur, Bihar</p>
