--- a/lecture33/index.html
+++ b/lecture33/index.html
@@ -212,11 +212,15 @@
         <div class="newsLetter-content">
             <!-- news-left -->
             <div class="news-left">
+                <div>
 
+                </div>
             </div>
             <!-- news-right -->
             <div class="news-right">
+                <div>
 
+                </div>
             </div>
         </div>
     </div>
